<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="10dp"
    android:paddingBottom="10dp"
    android:paddingLeft="10dp"
    android:paddingRight="10dp"
    android:orientation="horizontal">
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <ImageView
        android:id="@+id/thumbnailImageView"
        android:layout_width="100dp"
        android:layout_height="100dp"

         />
    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="10dp">

    <TextView
        android:id="@+id/dateView"
        android:layout_width="wrap_content"
        android:layout_height="25dp"
        android:text="@string/date"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/urlView"
        android:layout_width="wrap_content"
        android:layout_height="55dp"
        android:text="@string/url" />

    <TextView
        android:id="@+id/hdurlView"
        android:layout_width="wrap_content"
        android:layout_height="55dp"
        android:text="@string/hdurl" />
    </LinearLayout>

</LinearLayout>
</LinearLayout>