<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="10dp"
    android:paddingBottom="10dp"
    android:paddingRight="10dp"
    android:orientation="vertical">

    <!--title group-->
    <LinearLayout
        android:id="@+id/group_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:orientation="horizontal"
        >
        <TextView
            android:id="@+id/item_title_title"
            android:layout_width="40dp"
            android:layout_height="30dp"
            android:textStyle="bold"
            android:text="@string/title" />
        <TextView
            android:id="@+id/item_title"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:text="@string/title" />
    </LinearLayout>

    <!--Content Group-->
    <LinearLayout
        android:id="@+id/group_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal">
        <TextView
            android:id="@+id/list_content"
            android:layout_width="70dp"
            android:layout_height="30dp"
            android:textStyle="bold"
            android:text="@string/contents" />
        <TextView
            android:id="@+id/item_imageName"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:textStyle="italic"
            android:text="@string/name" />
        </LinearLayout>

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/item_imageView"
            android:layout_width="100dp"
            android:layout_height="100dp"

            />
        <LinearLayout

            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="10dp">

            <LinearLayout

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >
                <TextView
                    android:id="@+id/item_title_date"
                    android:layout_width="40dp"
                    android:layout_height="30dp"
                    android:textStyle="bold"
                    android:text="@string/date" />
            <TextView
                android:id="@+id/item_date"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:text="@string/date" />
            </LinearLayout>
            <LinearLayout

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >
                <TextView
                    android:id="@+id/item_title_url"
                    android:layout_width="40dp"
                    android:layout_height="30dp"
                    android:textStyle="bold"
                    android:text="@string/url" />

            <TextView
                android:id="@+id/item_url"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:text="@string/url" />
            </LinearLayout>
            <LinearLayout

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >
                <TextView
                    android:id="@+id/item_title_hdurl"
                    android:layout_width="40dp"
                    android:layout_height="30dp"
                    android:textStyle="bold"
                    android:text="@string/hdurl" />

            <TextView
                android:id="@+id/item_hdurl"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:text="@string/hdurl" />
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>
    </LinearLayout>
</LinearLayout>