<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context="com.example.finalproject.DetailsListViewFragment">


    <TextView
        android:id="@+id/content_imageName"
        android:layout_width="wrap_content"
        android:layout_height="25dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="5dp"
        android:textSize="18dp"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/one"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/content_imageName"
        android:paddingLeft="10dp">
    <TextView
        android:id="@+id/title_date"
        android:layout_width="50dp"
        android:layout_height="20dp"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="15dp"
        android:text="@string/date"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/content_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:paddingTop="5dp"
        android:layout_toEndOf="@id/title_date" />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/two"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/one"
        android:orientation="horizontal"
        android:paddingLeft="10dp">
    <TextView
        android:id="@+id/title_data_url"
        android:layout_width="50dp"
        android:layout_height="40dp"
        android:layout_marginLeft="15dp"
        android:layout_below="@id/title_date"
        android:layout_marginTop="5dp"
        android:text="@string/url"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/content_data_url"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/content_date"
        android:layout_marginTop="5dp"
        android:layout_toEndOf="@id/title_data_url" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/three"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/two"
        android:orientation="horizontal"
        android:paddingLeft="10dp">
    <TextView
        android:id="@+id/title_hdurl"
        android:layout_width="50dp"
        android:layout_height="40dp"
        android:layout_marginLeft="15dp"
        android:layout_below="@id/title_data_url"
        android:text="@string/hdurl"
        android:layout_marginTop="5dp"
        android:textStyle="bold" />
    <TextView
        android:id="@+id/content_hdurl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/content_data_url"
        android:layout_marginStart="0dp"
        android:layout_marginTop="5dp"
        android:layout_toEndOf="@id/title_hdurl" />
    </LinearLayout>

    <TextView
        android:id="@+id/guide"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/three"
        android:layout_marginLeft="55dp"
        android:layout_marginTop="10dp"
        android:textColor="#C14B25"
        android:text="@string/guide"/>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_centerInParent="true"
        android:layout_below="@id/guide"
        android:visibility="gone"
        />

    <ImageView
        android:id="@+id/content_imageView"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:layout_below="@id/guide"
        android:layout_marginTop="40dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
         />




    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/content_imageView"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="10dp"
        android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/five"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="10dp"
        android:orientation="horizontal">
      <EditText
       android:id="@+id/userInputTitle"
       android:layout_width="230dp"
       android:layout_height="40dp"
       android:hint="@string/please_set_a_title"
       />
      <Button
        android:id="@+id/savebutton"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginLeft="10dp"
        android:background="#FFDAD7"
        android:drawableRight="@drawable/like"
        android:ellipsize="none"
        android:text="@string/save"
        android:textSize="12dp"
        android:textStyle="bold"
        />
    </LinearLayout>
    <TextView
        android:id="@+id/guideForSaveFunction"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/save_comment"
        />
    </LinearLayout>
</RelativeLayout>